# parabolic-antenna-calculator

./: .gitignore  CMakeLists.txt  LICENSE.rtf  README.md
.github/pkg/arch/: Dockerfile  PKGBUILD.in  pkg.sh
.github/workflows/: Build.yml  Release.yml
cmake/: CMakeInput.hpp.in  Deps.cmake  Release.cmake
docs/: FILE.md
include/pac/arg/: Cmd.hpp  CmdError.hpp
include/pac/core/: Definition.hpp  Entry.hpp  Error.hpp  Logger.hpp  Message.hpp
include/pac/io/: DataFile.hpp  IoError.hpp  LogFile.hpp  PacProject.hpp
include/pac/math/: Calculate.hpp  Constants.hpp  Function.hpp  IndexList.hpp  Prefix.hpp
src/: CMakeLists.txt  Main.cpp
src/arg/: CMakeLists.txt  Cmd.cpp  CmdError.cpp
src/core/: CMakeLists.txt  Entry.cpp  Error.cpp  Logger.cpp
src/io/: CMakeLists.txt  DataFile.cpp  IoError.cpp  LogFile.cpp  PacProject.cpp
src/math/: CMakeLists.txt  Calculate.cpp
test/: CMakeLists.txt  CalculatorTest.cpp
