add_executable(ParabolicAntennaCalculater Main.cpp)

target_include_directories(ParabolicAntennaCalculater PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(ParabolicAntennaCalculater PRIVATE ParabolicAntennaCalculaterDeps ParabolicAntennaCalculaterCore ParabolicAntennaCalculaterArg)

add_subdirectory(core)
add_subdirectory(io)
add_subdirectory(arg)
